Fix tech stack icon alignment / justification issue

--- a/app/src/styles/3-modules/_tech-stack.scss
+++ b/app/src/styles/3-modules/_tech-stack.scss
@@ -23,7 +23,7 @@
             width: 5rem;
             img {
                 height: 4rem;
-                margin: 0.75rem auto;
+                margin: 0.75rem 0.1rem;
             }
             p {
                 margin-top: 0rem;
@@ -55,7 +55,10 @@
 
 @media (max-width: 1049px) and (min-width: 791px) {
     .tech-stack-container {
-        height: 20vh;
+        height: 25vh;
+        .tech-stack-logos-item img {
+            height: 4rem;
+        }
     }
 }
 
@@ -71,7 +74,7 @@
                 padding: 5vw;
                 height: auto;
                 img {
-                    height: 6rem;
+                    height: 5rem;
                 }
             }
         }
